--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<div class="brand header-brand">
 						<h1 class="m-0">
 							<a href="index.html">
-								<img class="header-logo-image" src="dist/images/main-logo.png" alt="Logo" width="152">
+								<img class="header-logo-image" src="dist/images/stlogo.png" alt="Logo" width="152">
 							</a>
 						</h1>
 					</div>
