--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<div class="brand header-brand">
 						<h1 class="m-0">
 							<a href="index.html">
-								<img class="header-logo-image" src="dist/images/stlogo.png" alt="Logo" width="152">
+								<img class="header-logo-image" src="dist/images/stred.png" alt="Logo" width="152">
 							</a>
 						</h1>
 					</div>
@@ -64,7 +64,7 @@
 							<div class="text-center">
 								<h1 class="hero-title mb-5">Voting has been Opened</h1>
 								 <h3>Participate Now!</h3>
-								<p>Show off your college spirit by voting for your college today. Don't miss this chance to support your beloved institution!</p> 
+								<p>Show off your spirit by voting for your faculty today. Don't miss this chance to support your beloved Faculty!</p> 
 							</div>
 							<div class="col-xl">
 								<div class="card">
@@ -114,14 +114,14 @@
 										</div>
 
 										<div class="mb-3">
-											<label class="form-label" for="basic-default-company">Year of study
+											<label class="form-label" for="basic-default-company">Year of Passing Out
 											</label>
 											<select ng-model="input.StudentYear" class="form-select">
-												<option value="">Select Year</option>
-												<option>1<sup>st</sup> Year</option>
-												<option>2<sup>nd</sup> Year</option>
-												<option>3<sup>rd</sup> Year</option>
-												<option>4<sup>th</sup> Year</option>
+												<option>2024</option>
+												<option>2025</option>
+												<option>2026</option>
+												<option>2027</option>
+												<option>2028</option>
 											</select>
 											<span class="error">{{errorStudentYear}}</span>
 										</div>
@@ -141,7 +141,7 @@
 										preference towards any category.</p>
 									<p class="section-paragraph">The jury debates and arrives at nominees and winners of
 										all the categories considering all the technicalities.</p>
-									<p class="section-paragraph"><a href="#">info@stumagz.com</a></p>
+									<p class="section-paragraph"><a href="#">info@studenttribe.in</a></p>
 								</div>
 
 							</div>
@@ -178,7 +178,7 @@
 					<div class="hero-inner">
 						<div class="hero-copy">
 							<div class="text-center">
-								<h1 class="hero-title mb-5">Vote For Your College</h1>
+								<h1 class="hero-title mb-5">Vote For Your Faculty</h1>
 								<!-- <h3>Post Your Requirements</h3> -->
 								<!-- <p>Please fill the form below to receive a quote for workspace. Please add all the details required.</p> -->
 							</div>
@@ -186,7 +186,7 @@
 								<div class="card">
 									<div class="card-header d-flex justify-content-between align-items-center">
 										<div class="text-left col-xl">
-											<h4 class="mb-3">Select Your College</h4>
+											<h4 class="mb-3">Select Your Faculty Below</h4>
 											<!-- <small class="text-muted mt-1">Please fill your information to verify.</small> -->
 											<hr class="mt-2">
 										</div>
@@ -195,151 +195,191 @@
 									<div class="card-body">
 
 										<div class="mb-3">
-											<label class="form-label" for="basic-default-fullname">Best Placement
-												Cell</label>
-											<select ng-model="input.BestPlacementCell" class="form-select">
+											<label class="form-label" for="basic-default-fullname">Mechanical Department</label>
+											<select ng-model="input.mechanical" class="form-select">
 												<option value="">Default select</option>
-												<option>Anurag University</option>
-												<option>Mahatma Gandhi Institute of Technology</option>
-												<option>CMR Group of Institutions</option>
-												<option>G. Narayanamma Institute of 
-													Technology Science (for Women) </option>
-												<option>KL University</option>
-												<option>Sreenidhi Institute of Science and Technology
+												<option>Mr. Santhosh, SR University</option>
+												<option>Mr. R Surendra Rao(HOD), KasiReddy Narayan Reddy College</option>
+												<option>Mr. P.Lava Kumar, CVR College of engineering</option>
+												<option>Mr. Sateesh Kumar Reddy, Velgapudi Ramakrishna Siddharth Engineering College</option>
+												<option>Mr. Rajeswar goud, Siddhartha Institute of engineering and technology </option>
+												<option>Mr. S.L.Narsimha Reddy, Siddhartha Institute of engineering and technology 
 												</option>
-												<option>CVR College of Engineering</option>
+												<option>Ms. Vasantha, CMRCET</option>
+												<option>Ms. Thejasree Gandhe, CMRCET</option>
+												<option>DR.A.MALLIKARJUN , CMRCET</option>
+												<option>Mr. Sammaiah, SR University</option>
 											</select>
 										</div>
 										<div class="mb-3">
-											<label class="form-label" for="basic-default-phone">Best
-												E-Cell/Innovation Lab</label>
-											<select ng-model="input.BestECell" class="form-select">
+											<label class="form-label" for="basic-default-phone">ECE Department</label>
+											<select ng-model="input.ece" class="form-select">
 												<option value="">Default select</option>
-												<option>Vasavi College of Engineering</option>
-												<option>Vignan Institute of Technology and Science</option>
-												<option>EC,COFEE- St Francis College for Women</option>
-												<option>JNTU Hyderabad</option>
-												<option>Geethanjali College of Engineering 
-													and Technology
+												<option>Ms. R. Leelavathi, Vasavi college of engineering</option>
+												<option>Mr. Subhash, MRCET</option>
+												<option>Dr.S.S.Saravana kumar, Srinivasa College-AP</option>
+												<option>Mr. Ramesh Babu, MRCET</option>
+												<option>Mr. Sydaiah, Sri Indu College
 													</option>
-													<option>G. Narayanamma Institute of 
-														Technology Science (for Women)</option>
+													<option>Dr M.Lakshmi, VJIT, Hyderabad </option>
+													<option>Mr. Rambabu, SNIST, Hyderabad </option>
+													<option>Ms. M. Pavani, SREYAS, Hyderabad </option>
+													<option>Mr. Y.Raju, Govt.Polytechnic, Siddipet</option>
+													<option>Mr. Chaitanya, MREC, Hyderabad</option>
+													<option>Ms. Divya Devagiri, CMRCET, Hyderabad</option>
+													<option>Dr A.Rajani, JNTUH, Hyderabad</option>
 											</select>
 										</div>
 										<div class="mb-3">
-											<label class="form-label" for="basic-default-email">Best College In
-												Sports</label>
+											<label class="form-label" for="basic-default-email">EEE Department</label>
 											<div class="input-group input-group-merge">
-												<select ng-model="input.BestSportsCollege" class="form-select">
+												<select ng-model="input.eee" class="form-select">
 													<option value="">Default select</option>
-													<option>MLR Institute of Technology</option>
-													<option>Vaagdevi College of Engineering</option>
-													<option>Nalla Malla Reddy Engineering 
-														College</option>
-													<option>CSI Wesley Institute of 
-														Technology and Sciences </option>
-													<option>Kommuri Pratap Reddy Institute of 
-														Technology </option>
-														<option>TKR Group of Institutions</option>
-														<option>St.Martin's Engineering College</option>
+													<option>Mr. Ravi varma, NIT- Jalandar</option>
+													<option>Mr. Mohd. Waseem sir, JN Govt College</option>
+													<option>Mr. K srinivas rao, Anurag University</option>
+													<option>Dr.KSCG.Mouryan, GNI</option>
+													<option>Dr.Lakshmi, SPEC</option>
+														<option>Mr. Chandra Shekhar, MGIT Hyderabad</option>
+														<option>Mr. Sydaiah, SRI INDU, Hyderbad</option>
+														<option>Dr.Phaneendra Babu Bobba, GRIET Hyderbad</option>
+														<option>Ms. Kadari Mamatha, JBIET, Hyderbad</option>
 												</select>
 												<!-- <span class="input-group-text" id="basic-default-email2">@example.com</span> -->
 											</div>
 											<!-- <div class="form-text"> You can use letters, numbers &amp; periods </div> -->
 										</div>
 										<div class="mb-3">
-											<label class="form-label" for="basic-default-company">Best College in Co Curriculars</label>
-											<select ng-model="input.BestCollegeinCocurriculars" class="form-select">
+											<label class="form-label" for="basic-default-company">CSE Department</label>
+											<select ng-model="input.cse" class="form-select">
 												<option value="">Default select</option>
-												<option>SR UNIVERSITY</option>
-												<option>EC,COFEE- St Francis College for Women</option>
-												<option>VNR Vignana Jyothi Institute of 
-													Engineering &Technology
+												<option>Mr. pranay, Nxtwave</option>
+												<option>Ms. Pooja, SIET</option>
+												<option>Dr. P. Tirupathi, JNTUHCEM
 													</option>
-												<option>St.Peter's Engineering College</option>
-												<option>Avinash College of Commerce</option>
-												<option>Nalla Narasimha Reddy Education 
-													Society’s Group of Institutions </option>
-													<option>Methodist College of Engineering 
-														& Technology</option>
+												<option>Dr.K.Sandeep, HITAM</option>
+												<option>Dr.B.Santosh kumar, G pulla reddy</option>
+												<option>Dr.M.Santosh Kumar Goud, MallaReddy University </option>
+												<option>Ms. Mounika, Bhasker Engineering College</option>
+												<option>Dr. Muniraju Naidu vadlamudi, KLU Hyderabad</option>
+												<option>Ms. Rupanusha, HITS</option>
+												<option>Ms. Samthasree, NMREC</option>
+												<option>Mr. P.S Verma, MGIT</option>
+												<option>Mr. Suresh Lokhande, Osmania University</option>
+												<option>Ms. Preethi Jeevan, SNIST</option>
+												<option>Ms. Ramu Gandikota, NRCM</option>
 											</select>
 										</div>
 										<div class="mb-3">
-											<label class="form-label" for="basic-default-company">Best Emerging
-												College</label>
-											<select ng-model="input.BestEmergingCollege" class="form-select">
+											<label class="form-label" for="basic-default-company">CSE-AIDS Department</label>
+											<select ng-model="input.cseaids" class="form-select">
 												<option value="">Default select</option>
-												<option>Neil Gogte Institute of Technology </option>
-												<option>Roots Collegium</option>
-												<option>KG Reddy College of Engineering 
-													and Technology</option>
-												<option>Mahindra University</option>
-												<option>Malla Reddy University</option>
-												<option>BVRIT Hyderabad College of 
-													Engineering for Women</option>
+												<option>Ms. Madhavi Latha, SREYAS, Hyderabad</option>
+												<option>Mr. Vasantha kumar, NBKR-AP</option>
+												<option>Mr. Srinivas, TKREM</option>
+												<option>Mr. Bijay Kumar Sethi, Vardhaman College</option>
+												<option>Ms. Narmada, Samskruthi College</option>
+												<option>Mr. Vishnu Vardhan, St.Martin's</option>
+												<option>Ms. Lavanya, GCTC</option>
+												<option>Mr. Mayank sharma, St.Martin's</option>
+												<option>Mrs. Fouziya, VMTW</option>
+												<option>Mr. Nuthan kumar reddy, CVRH</option>
+												<option>Ms. Padma Joshi, SREYAS, Hyderabad</option>
 											</select>
 										</div>
 										<div class="mb-3">
-											<label class="form-label" for="basic-default-company">Best
-												Infrastructure Award</label>
-											<select ng-model="input.BestInfrastructure" class="form-select">
+											<label class="form-label" for="basic-default-company">CSE-AIML Department</label>
+											<select ng-model="input.cseaiml" class="form-select">
 												<option value="">Default select</option>
-												<option>CMR Group of Institutions</option>
-												<option>Woxsen University</option>
-												<option>Geethanjali College of Engineering 
-													and Technology</option>
-												<option>KL University</option>
-												<option>Sreenidhi Institute of Science and Technology</option>
-												<option>MLR Institute of Technology</option>
+												<option>Ms. Manjula, VMTW</option>
+												<option>Mr. Suresh, St. Mary's</option>
+												<option>Mr. Sathish Mankala, CMRIT</option>
+												<option>Mr. SURYANARAYANA, MREC</option>
+												<option>MR. Arun Sampaul Thompson, JBIET</option>
+												<option>Ms. Divya Devagiri, CMRCET</option>
+												<option>Ms. Rajini Parimala, GRIET</option>
+												<option>Mr. Rama Krishna, CVRH</option>
+												<option>Dr .N.subhadra, GCTC</option>
+												<option>Mr.T.V.Rajinikanth, SNIST</option>
 											</select>
 										</div>
 										<div class="mb-3">
-											<label class="form-label" for="basic-default-company">Best Eco-Friendly
-												College</label>
-											<select ng-model="input.BestEcoFriendlyCollege" class="form-select">
+											<label class="form-label" for="basic-default-company">Civil Department</label>
+											<select ng-model="input.civil" class="form-select">
 												<option value="">Default select</option>
-												<option>Hyderabad Institute of Technology 
-													and Management </option>
-												<option>Vignan Institute of Technology and Science</option>
-												<option>KG Reddy College of Engineering 
-													and Technology</option>
-												<option>Osmania University</option>
-												<option>JNTU Hyderabad</option>
-												<option>Vaagdevi College of Engineering</option>
+												<option>Dr.R.Lakshmi, SPEC Hyderabad</option>
+												<option>Dr. G. Sree Laxmi Devi , NMREC</option>
+												<option>Mr. Sudhakar, SIET</option>
+												<option>Mr. A. Mallikarjun, CMRCET</option>
+												<option>Mr. Aditya , JBIET</option>
 											</select>
 										</div>
 										<div class="mb-3">
-											<label class="form-label" for="basic-default-company">Best College in
-												R&D</label>
-											<select ng-model="input.BestRAndDCollege" class="form-select">
+											<label class="form-label" for="basic-default-company">MBA Department</label>
+											<select ng-model="input.mba" class="form-select">
 												<option value="">Default select</option>
-												<option>Vardhaman College of 
-													Engineering</option>
-												<option>Guru Nanak Institutions</option>
-												<option>GRIET</option>
-												<option>Institute of Aeronautical Engineering</option>
-												<option>VNR Vignana Jyothi Institute of</option>
-												<option>B V Raju Institute of Technology</option>
-												<option>Stanley College of Engineering 
-													and Technology for Women</option>
+												<option>Dr. Bhavani Marka, JNTUH</option>
+												<option>Ms. Annapurna, TKREM</option>
+												<option>Mr. Surya narayan, TKREM</option>
+												<option>Mr. srisailam, TKREM</option>
+												<option>Mr. chandra shekar reddy, TKREM</option>
 											</select>
 										</div>
 										<div class="mb-3">
-											<label class="form-label" for="basic-default-company">Best Participation
-												in Events</label>
-											<select ng-model="input.BestParticipationInEvents" class="form-select">
+											<label class="form-label" for="basic-default-company">BA Department</label>
+											<select ng-model="input.ba" class="form-select">
 												<option value="">Default select</option>
-												<option>Anurag University</option>
-												<option>Malla Reddy College of 
-													Engineering and Technology </option>
-												<option>St. Peter's Engineering College </option>
-												<option>Institute of Aeronautical Engineering </option>
-												<option>Vignana Bharathi Institue of Technology</option>
-												<option>Sri Indu College of Engineering & 
-													Technology</option>
-													<option>Vignan's Institute of Management 
-														and Technology for Women
-														</option>
+												<option>Ms. Kanaka yeldutti, Bhavans College</option>
+												<option>Mr. Vijaykumar, GDC Medak</option>
+												<option>Ms. Rajeshwari natrajan, Loyala Academy</option>
+												<option>Ms. Hari Priya, Avinash</option>
+												<option>Ms. Akhila, Avinash</option>
+												<option>Ms. Madhuri, Avinash</option>
+											</select>
+										</div>
+										<div class="mb-3">
+											<label class="form-label" for="basic-default-company">BBA Department</label>
+											<select ng-model="input.bba" class="form-select">
+												<option value="">Default select</option>
+												<option>Ms. Priyanka, Pragathi MahaVidhalayala</option>
+												<option>Ms. Sandya, Badruka College</option>
+												<option>Mr. Prabhas, Dhruva Degree College</option>
+												<option>Mr. Sudheer, Avinash</option>
+												<option>Prof.V.Shekhar, JNTUH</option>
+												<option>Mr. Naveen, JNTUH</option>
+												<option>Ms. Usha Rani, Avinash</option>
+												<option>Ms. Chandini, Badruka College</option>
+											</select>
+										</div>
+										<div class="mb-3">
+											<label class="form-label" for="basic-default-company">TPO</label>
+											<select ng-model="input.tpo" class="form-select">
+												<option value="">Default select</option>
+												<option>Mr. Mayank sharma, St. Mary engineering</option>
+												<option>Mr. Bhagat, SIET</option>
+												<option>Mr. Bharth, MREM</option>
+												<option>Mr. Venkatesh, SRI INDU, Hyderabad</option>
+												<option>Mr. Kiran Kuncham, Bennet University</option>
+												<option>Mr. Srikanth, ICFAI</option>
+												<option>Ms. Neelam Singh, Samskruthi College</option>
+												<option>Mr. Vinay Chopra, GNI, Hyderabad</option>
+												<option>Mr. Mary thomas, St. Francis</option>
+												<option>Mr. Chandrashekar, Villa Marie</option>
+												<option>Ms. Shikha duggal, VJIT Hyderabad</option>
+											</select>
+										</div>
+										<div class="mb-3">
+											<label class="form-label" for="basic-default-company">B.com Department</label>
+											<select ng-model="input.bcom" class="form-select">
+												<option value="">Default select</option>
+												<option>Mr. Madhavi Latha, Avinash College</option>
+												<option>Ms. Swapna, Holy mary degree</option>
+												<option>Mr. Madhavi Latha, Rishi degree college</option>
+												<option>Mr. Kumaraswamy, Badrukha College</option>
+												<option>Ms. Chandarakala, Govt. Degree College Uppal</option>
+												<option>Ms. Vaishnavi, Siva Shivani Degree College</option>
+												<option>Ms. Saraswati Kondoju, Avinash College</option>
+												<option>Ms. Shruthi kayal, Badrukha College</option>
 											</select>
 											<span class="error">{{errorBest}}</span>
 										</div>
