--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 					<div class="brand header-brand">
 						<h1 class="m-0">
 							<a href="index.html">
-								<img class="header-logo-image" src="dist/images/main-logo.png" alt="Logo" width="152">
+								<img class="header-logo-image" src="dist/images/stred.png" alt="Logo" width="152">
 							</a>
 						</h1>
 					</div>
@@ -421,7 +421,7 @@
 					<div class="brand header-brand">
 						<h1 class="m-0">
 							<a href="index.html">
-								<img class="header-logo-image" src="dist/images/main-logo.png" alt="Logo" width="152">
+								<img class="header-logo-image" src="dist/images/stred.png" alt="Logo" width="152">
 							</a>
 						</h1>
 					</div>
@@ -485,7 +485,7 @@
 					<div class="brand header-brand">
 						<h1 class="m-0">
 							<a href="index.html">
-								<img class="header-logo-image" src="dist/images/main-logo.png" alt="Logo" width="152">
+								<img class="header-logo-image" src="dist/images/stred.png" alt="Logo" width="152">
 							</a>
 						</h1>
 					</div>
