--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 	<script src="dist/js/angular.min.js"></script>
 	<script src="dist/js/index.js"></script>
-	<!-- <script src="https://www.google.com/recaptcha/api.js" async defer></script> -->
+	<script src="https://www.google.com/recaptcha/api.js" async defer></script> 
 	<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-66299251-1"></script>
 <script>
