--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 	<script src="dist/js/index.js"></script>
 	<script src="https://www.google.com/recaptcha/api.js" async defer></script> 
 	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-66299251-1"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T2S56YZDSW"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-66299251-1');
+  gtag('config', 'G-T2S56YZDSW');
 </script>
 
 	<style>
