--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Vote | Prost Awards</title>
+	<title>Vote | Faculty Awards</title>
 	<link href="https://fonts.googleapis.com/css?family=Heebo:400,900|Oxygen:900" rel="stylesheet">
 	<link rel="stylesheet" href="dist/css/style.css">
 	<link rel="stylesheet" href="dist/css/core.css">
