--- a/index.html
+++ b/index.html
@@ -312,18 +312,26 @@
 												<option>Dr. G. Sree Laxmi Devi , NMREC</option>
 												<option>Mr. Sudhakar, SIET</option>
 												<option>Mr. A. Mallikarjun, CMRCET</option>
-												<option>Mr. Aditya , JBIET</option>
+												<option>Dr. P Srinivas Reddy, CBIT</option>
+												<option>Mr. A Prakash, GRIET</option>
+												<option>Dr. K Ravi Kumar, VNR VJIET</option>
+												<option>Mr. Aditya, JBIET</option>
 											</select>
 										</div>
 										<div class="mb-3">
 											<label class="form-label" for="basic-default-company">MBA Department</label>
 											<select ng-model="input.mba" class="form-select">
 												<option value="">Default select</option>
-												<option>Dr. Bhavani Marka, JNTUH</option>
-												<option>Ms. Annapurna, TKREM</option>
+												<option>Dr. Bhavani Marka, University college of management</option>
+												<option>Ms. Annapurna, TKREM</option>	
+												<option>Dr. K. Grace Mani, Siv Shivani Institute</option>
+												<option>Dr. Devi Prasad Ghosh, Badruka School of Management</option>
+												<option>Dr. Seema Ghosh, Bhavans Vivekananda</option>
+												<option>Mrs. P Kalpana, Anurag University</option>
+												<option>Mrs. Ch Chandana, KG Reddy College</option>
+												<option>MDr. B Renuka, KMIT</option>
 												<option>Mr. Surya narayan, TKREM</option>
-												<option>Mr. srisailam, TKREM</option>
-												<option>Mr. chandra shekar reddy, TKREM</option>
+												<option>Mr. A Koti Reddy, MLRITM</option>
 											</select>
 										</div>
 										<div class="mb-3">
@@ -333,9 +341,12 @@
 												<option>Ms. Kanaka yeldutti, Bhavans College</option>
 												<option>Mr. Vijaykumar, GDC Medak</option>
 												<option>Ms. Rajeshwari natrajan, Loyala Academy</option>
-												<option>Ms. Hari Priya, Avinash</option>
-												<option>Ms. Akhila, Avinash</option>
 												<option>Ms. Madhuri, Avinash</option>
+												<option>Dr. Melissa helen, Nizam College</option>
+												<option>Ms. Madhura Ayachit, St Francis</option>
+												<option>Dr. Archana Jha, St Ann's College</option>
+												<option>Ms. Hari Priya, Avinash</option>
+												<option>Dr. K. P. Ruth, Telangana Mahila Vishwavidalaya</option>
 											</select>
 										</div>
 										<div class="mb-3">
