--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					<div class="hero-inner">
 						<div class="hero-copy">
 							<div class="text-center">
-								<h1 class="hero-title mb-5">Voting has been Opened</h1>
+								<h1 class="hero-title mb-5">Voting is Live</h1>
 								 <h3>Participate Now!</h3>
 								<p>Show off your spirit by voting for your faculty today. Don't miss this chance to support your beloved Faculty!</p> 
 							</div>
@@ -405,14 +405,13 @@
 								</div>
 								<div class="cta-header tcBlog text-center">
 									<h2 class="section-title mt-0">Terms & Conditions for Voting</h2>
-									<p class="section-paragraph">Winner is selected based on Voting and Jury</p>
-									<p class="section-paragraph">Nomination of each categories are finalized based on
-										the applications filled by the student or college.</p>
+									<p class="section-paragraph">Winner is selected based on Voting</p>
+									<p class="section-paragraph">Nominations in each category have been finalized based on
+										the applications filled by the students.</p>
 									<p class="section-paragraph">Disclaimer: The organization doesn’t hold any partial
 										preference towards any category.</p>
-									<p class="section-paragraph">The jury debates and arrives at nominees and winners of
-										all the categories considering all the technicalities.</p>
-									<p class="section-paragraph"><a href="#">info@stumagz.com</a></p>
+									<p class="section-paragraph"></p>
+									<p class="section-paragraph"><a href="#">info@studenttribe.in</a></p>
 								</div>
 
 							</div>
