--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 												<option>Ms. Chandini, Badruka College</option>
 											</select>
 										</div>
-										<div class="mb-3">
+										<!-- <div class="mb-3">
 											<label class="form-label" for="basic-default-company">TPO</label>
 											<select ng-model="input.tpo" class="form-select">
 												<option value="">Default select</option>
@@ -379,7 +379,7 @@
 												<option>Mr. Chandrashekar, Villa Marie</option>
 												<option>Ms. Shikha duggal, VJIT Hyderabad</option>
 											</select>
-										</div>
+										</div> -->
 										<div class="mb-3">
 											<label class="form-label" for="basic-default-company">B.com Department</label>
 											<select ng-model="input.bcom" class="form-select">
