--- a/index.html
+++ b/index.html
@@ -200,16 +200,16 @@
 											<select ng-model="input.mechanical" class="form-select">
 												<option value="">Default select</option>
 												<option>Mr. Santhosh, SR University</option>
-												<option>Mr. R Surendra Rao(HOD), KasiReddy Narayan Reddy College</option>
+												<option>Mr. R Surendra Rao, KasiReddy Narayan Reddy College</option>
 												<option>Mr. P.Lava Kumar, CVR College of engineering</option>
-												<option>Mr. Sateesh Kumar Reddy, Velgapudi Ramakrishna Siddharth Engineering College</option>
-												<option>Mr. Rajeswar goud, Siddhartha Institute of engineering and technology </option>
-												<option>Mr. S.L.Narsimha Reddy, Siddhartha Institute of engineering and technology 
-												</option>
+												<option>Mr. Sateesh Kumar Reddy, VR Siddhartha</option>
+												<option>Mr. Rajeswar goud, SIET</option>
 												<option>Ms. Vasantha, CMRCET</option>
 												<option>Ms. Thejasree Gandhe, CMRCET</option>
-												<option>DR.A.MALLIKARJUN , CMRCET</option>
 												<option>Mr. Sammaiah, SR University</option>
+												<option>Mr. V Balaji, GRIET</option>
+												<option>Ms. S Navya Sri, Vardhman</option>
+												<option>Dr. K sravanthi, MLRITM </option>
 											</select>
 										</div>
 										<div class="mb-3">
