--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 					<div class="hero-inner">
 						<div class="hero-copy">
 							<div class="text-center">
-								<h1 class="hero-title mb-5">Voting is Live</h1>
-								 <h3>Participate Now!</h3>
-								<p>Show off your spirit by voting for your faculty today. Don't miss this chance to support your beloved Faculty!</p> 
+								<h1 class="hero-title mb-5">Voting has been closed</h1>
+								 <h3>Thanks for voting!</h3>
+								<!-- <p>Show off your spirit by voting for your faculty today. Don't miss this chance to support your beloved Faculty!</p>  -->
 							</div>
 							<div class="col-xl">
-								<div class="card">
+								<!-- <div class="card">
 									<div class="card-header d-flex justify-content-between align-items-center">
 										<div class="text-left col-xl">
 											<h4 class="mb-2">Contact details</h4>
@@ -128,9 +128,9 @@
 										</div>
 
 									</div>
-								</div>
+								</div> -->
 								<!-- <div class="g-recaptcha" data-sitekey="6Lc4u6MkAAAAAEbgHvGeHioIbFHpLh1Tmj2V0iRk"></div> -->
-								<div class="mt-5 mb-3 text-center">
+								<!-- <div class="mt-5 mb-3 text-center">
 									<button ng-click="onSubmitContact()" class="btn btn-primary">Next</button>
 								</div>
 								<div class="cta-header tcBlog text-center">
@@ -143,7 +143,7 @@
 									<p class="section-paragraph">The jury debates and arrives at nominees and winners of
 										all the categories considering all the technicalities.</p>
 									<p class="section-paragraph"><a href="#">info@studenttribe.in</a></p>
-								</div>
+								</div> -->
 
 							</div>
 						</div>
